절대경로 추가

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,10 @@
     // ...
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@components/*": ["./src/components/*"],
+      "@styles/*": ["./src/styles/*"],
+      "@utils/*": ["./src/utils/*"]
     }
     // ...
   }
